WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
124647
Fix hover area for divs with css transforms
https://bugs.webkit.org/show_bug.cgi?id=124647
Summary
Fix hover area for divs with css transforms
Mihai Maerean
Reported
2013-11-20 01:49:24 PST
The hover area on witch the :hover state is activated is only a portion of the div when the div has css transforms.
Attachments
layout test
(1.45 KB, text/html)
2013-11-20 01:58 PST
,
Mihai Maerean
no flags
Details
patch
(4.30 KB, patch)
2013-11-21 01:46 PST
,
Mihai Maerean
no flags
Details
Formatted Diff
Diff
patch. incorporates the feedback.
(5.07 KB, patch)
2013-11-21 02:22 PST
,
Mihai Maerean
no flags
Details
Formatted Diff
Diff
layout test that fails even with the fix.
(1.90 KB, text/html)
2013-11-22 09:02 PST
,
Mihai Maerean
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Mihai Maerean
Comment 1
2013-11-20 01:58:26 PST
Created
attachment 217409
[details]
layout test The onclick handler is also affected by this bug, it doesn't fire when clicking the area that doesn't trigger the :hover state.
Mihai Maerean
Comment 2
2013-11-21 01:46:49 PST
Created
attachment 217533
[details]
patch
Mihai Maerean
Comment 3
2013-11-21 02:22:50 PST
Created
attachment 217538
[details]
patch. incorporates the feedback.
WebKit Commit Bot
Comment 4
2013-11-21 07:14:44 PST
Comment on
attachment 217538
[details]
patch. incorporates the feedback. Clearing flags on attachment: 217538 Committed
r159626
: <
http://trac.webkit.org/changeset/159626
>
WebKit Commit Bot
Comment 5
2013-11-21 07:14:47 PST
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 6
2013-11-21 11:01:39 PST
Can you make a testcase where the transformed element overlaps its parent div, and give the parent an rgba() color. I want to see if they visibly intersect.
Simon Fraser (smfr)
Comment 7
2013-11-21 11:02:57 PST
I'm not yet convinced that this patch is correct. Allan, please don't review in areas where you don't have expertise.
Mihai Maerean
Comment 8
2013-11-21 12:37:26 PST
(In reply to
comment #6
)
> Can you make a testcase where the transformed element overlaps its parent div, and give the parent an rgba() color. I want to see if they visibly intersect.
Using Web Inspector, I have added the background-color to the parent div and the 2 divs don't visibly intersect, meaning the negative Z coordinates of the rotated child are painted on top of the background color of the parent. Do you want me to add this background-color property to the layout test file?
Mihai Maerean
Comment 9
2013-11-22 09:02:49 PST
Created
attachment 217690
[details]
layout test that fails even with the fix.
Mihai Maerean
Comment 10
2013-11-22 09:07:10 PST
I have logged
https://bugs.webkit.org/show_bug.cgi?id=124777
to fix the problem shown by the attached layout test.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug